--- a/demo.html
+++ b/demo.html
@@ -18,15 +18,21 @@
 
     <!-- Include Editor JS files. -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/js/froala_editor.pkgd.min.js"></script>
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.6.5/js/languages/zh_tw.js"></script>
+    <!-- Include the Tables plugin JS file -->
+    <script src="https://platform.instagram.com/en_US/embeds.js"></script>
+    <script src="js/plugins/instagram.js"></script>
   </head>
   <body>
     <!-- Create a tag that we will use as the editable area. -->
     <!-- You can use a div tag as well. -->
     <div id="editor">
-      <pre id="preview"></pre>
     </div>
     <script> $(function() { 
-  	$('#editor').froalaEditor(); }); </script>
+  	$('#editor').froalaEditor({
+      toolbarButtons: ['fullscreen', 'bold', 'italic', 'underline', 'strikeThrough', 'subscript', 'superscript', 'fontFamily', 'fontSize', '|', 'color', 'emoticons', 'inlineStyle', 'paragraphStyle', '|', 'paragraphFormat', 'align', 'formatOL', 'formatUL', 'outdent', 'indent', '-', 'insertLink', 'insertImage', 'insertVideo', 'insertFile', 'insertTable', '|', 'quote', 'insertHR', 'undo', 'redo', 'clearFormatting', 'selectAll', 'html','instagram'],
+      language: 'zh_tw'
+    });
+    }) </script>
   </body>
 </html>
